terms glossary finished

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -121,19 +121,18 @@
     "\n",
     "<b>overlaping clique</b> - Considering the lists of nodes which are part of a clique it may happen that some nodes are indicated on more than one list. This may lead to a situation when a node is counted more than once (see examples from point no. 10)\n",
     "\n",
-    "<b>clustering</b> - \n",
+    "<b>clustering</b> - The local clustering of each node in graph is the fraction of triangles that actually exist over all possible triangles in its neighborhood. The average clustering coefficient of a graph is the mean of local clusterings.\n",
     "\n",
-    "<b>group persistence</b> - \n",
+    "<b>group persistence</b> - \"How groups emerge and remain stable in various contexts is an important question in the social\n",
+    "sciences, as group cohesion and group boundaries are linked to crucial societal outcomes such as segregation, group inequalities, differences in information access, and political polarization. Within social groups, individuals typically form strong positive ties, such as friendship. The interpersonal relations that connect individuals who are members of different groups, however, tend to be weaker, neutral, or even negative.\" - as stated in <a href=\"https://www.sciencedirect.com/science/article/pii/S0378873318300170\">\"The Emergence and Stability of Groups in Social Networks\"</a> by Christoph Stadtfel, Károly Takác and András Vörös\n",
     "\n",
-    "<b>influence</b> - \n",
+    "<b>influence</b> - by <a href=\"https://en.wikipedia.org/wiki/Social_influence\">influence</a> I understand a simple number of mutual connections (as previously defined). The most influential man would have the most mutual connections - best relations with the most other men. In fact, this does not necessarily mean he <i> was influential</i> - he could just be most open and friendly to others. Beside this notebook, influence is much more complicated term.\n",
     "\n",
-    "<b>correlation</b> - \n",
+    "<b>correlation</b> - \"correlation or dependence is any statistical relationship, whether causal or not, between two random variables or bivariate data. In the broadest sense correlation is any statistical association, though it commonly refers to the degree to which a pair of variables are linearly related\" - <a href=\"https://en.wikipedia.org/wiki/Correlation_and_dependence\">Wikipedia</a>\n",
     "\n",
-    "<b>prediction</b> - \n",
+    "<b>standard deviation</b> - the standard deviation is a measure of the amount of variation or dispersion of a set of values.[1] A low standard deviation indicates that the values tend to be close to the mean (also called the expected value) of the set, while a high standard deviation indicates that the values are spread out over a wider range - <a href=\"https://en.wikipedia.org/wiki/Standard_deviation\">Wikipedia</a>\n",
     "\n",
-    "<b>standard deviation</b> - \n",
-    "\n",
-    "<b>statistical significance</b> - \n"
+    "<b>statistical significance</b> - please read <a href=\"https://hbr.org/2016/02/a-refresher-on-statistical-significance\">this article</a>\n"
    ]
   },
   {
