all descriptions filled in

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1972,7 +1972,18 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "In 2020, fourty years after the experiments on Arctowski research station, there are more initiatives requiring certain amount of people to be isolated for a long period of time, with limited availability of help and possibly in a hostile environment. In May there was <a href=\"https://edition.cnn.com/2020/05/05/business/nasa-tom-cruise-movie-space-scn/index.html\">an annoucement</a> about a movie being planned to be shot on ISS starring Tom Cruise. Few months later, Roscosmos <a href=\"http://en.roscosmos.ru/21676/\">announced</a> a plan to race with USA in shooting a movie on <a href=\"https://en.wikipedia.org/wiki/International_Space_Station\">ISS</a>.<br>\n",
+    "Colonising new frontiers was always a daunting task - from first chinese and europeans voyages beyond their respective continents early explorers had to be tightly packed in small space, with limited resources and under psychological pressure. \n",
+    "Now, in the advent of <a href=\"https://www.space.com/15395-asteroid-mining-planetary-resources.html\">commercial endeavors in space</a>, it is crucial to be able to select the best of available women and men to the challenging tasks. In the case of Arctowki station, we deal with already selected men, one for a given profession. However before the start of a particular mission, people are selected for training, and from trained people few are selected for actual mission. To this date, astronauts were mainly pilots with military background, but now there is araising demand for other professions (moviemakers, actors, miners, ...). This creates a demand for quick and precise evaluation of people: from 30 equally proffessional women and men, which 5 people should be chosen for a one year flight to mine asteroid belt, given their social interactions and mental stability?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>The goal here</b> is to develop a method to select a group of 5 men from 21, given their charts and calculations done, who would create the best posible team (but only in terms of getting along, and despite their professions)."
+   ]
   },
   {
    "cell_type": "code",
